@@ -1,11 +1,11 @@
 from webkit.factories import *
 
-_builders = [('post-commit-powerpc-mac-os-x', StandardBuildFactory, ['apple-slave-6', 'apple-slave-5', 'apple-slave-3']),
-             ('post-commit-leaks-powerpc-mac-os-x', LeakBuildFactory, ['apple-slave-5', 'apple-slave-3', 'apple-slave-6']),
-             ('post-commit-pixel-powerpc-mac-os-x', PixelTestBuildFactory, ['apple-slave-3', 'apple-slave-5', 'apple-slave-6']),
+_builders = [('post-commit-powerpc-mac-os-x', StandardBuildFactory, ['apple-slave-6', 'apple-slave-5'])
+             ('post-commit-leaks-powerpc-mac-os-x', LeakBuildFactory, ['apple-slave-5', 'apple-slave-6'])
              ('page-layout-test-mac-os-x', PageLoadTestBuildFactory, ['apple-slave-1']),
+             ('post-commit-pixel-powerpc-mac-os-x', PixelTestBuildFactory, ['apple-slave-3', 'apple-slave-4'])
              ('post-commit-win32', Win32BuildFactory, ['apple-slave-2']),
-             ('periodic-powerpc-mac-os-x-no-svg', NoSVGBuildFactory, ['apple-slave-3', 'apple-slave-5', 'apple-slave-6']),
+             ('periodic-powerpc-mac-os-x-no-svg', NoSVGBuildFactory, ['apple-slave-4', 'apple-slave-3'])
              ]
 
 def getBuilders():
